# RAG_Journey

./: README.md  main.py  pyproject.toml  requirements.txt
0-DataIngestParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  4-csvexcelparsing.ipynb  5-jsonparsing.ipynb  6-databaseparsing.ipynb
0-DataIngestParsing/data/databases/: company.db
0-DataIngestParsing/data/json_files/: company_data.json  events.jsonl
0-DataIngestParsing/data/structured_files/: inventory.xlsx  products.csv
1-VectorEmbeddingandDatabases/: embedding.ipynb  openaiembedding.ipynb
2-VectorSore/: chromadb.ipynb  doc_2.txt
2-VectorSore/data/: doc_0.txt  doc_1.txt
3-AdvancedChunking/: langchain_intro.txt  semanticchunking.ipynb
5-QueryEnhancement/: 1-queryexpansion.ipynb  2-querydecomposition.ipynb  3-HyDE.ipynb
5-QueryEnhancement/output/langchain/: chroma.sqlite3
5-QueryEnhancement/output/steve_jobs_for_hyde.db/: chroma.sqlite3
MultiModelRAG/: multimodelopenai.ipynb
